src/objects/Bookmark_Links__c.object
<CustomObject>
    <description>This object is used to store bookmark links displayed on the application footer. This object will be business enabled.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Must be true for bookmark link to active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookmarklinksExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>BookmarklinksExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Display name of links</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <description>Profiles enabled for each link</description>
        <label>Profiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACET Motion</fullName>
                </value>
                <value>
                    <fullName>ACET Provider</fullName>
                </value>
                <value>
                    <fullName>ACET Member</fullName>
                </value>
                <value>
                    <fullName>OF CSR</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>ACET EB Agent</fullName>
                </value>
                <value>
                    <fullName>ECM Back Office Agent</fullName>
                </value>
                <value>
                    <fullName>Research User</fullName>
                </value>
                <value>
                    <fullName>Provider Service</fullName>
                </value>
                <value>
                    <fullName>ACET ETS-BE</fullName>
                </value>
                <value>
                    <fullName>ACET ETS-BE Research User</fullName>
                </value>
                <value>
                    <fullName>Provider Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>FPS OST</fullName>
                </value>
                <value>
                    <fullName>ACET CSO</fullName>
                    <isActive>false</isActive>
                    <label>ACET CSO</label>
                </value>
                <value>
                    <fullName>ACET CSS</fullName>
                    <isActive>false</isActive>
                    <label>ACET CSS</label>
                </value>
                <value>
                    <fullName>ACET DCSM</fullName>
                    <isActive>false</isActive>
                    <label>ACET DCSM</label>
                </value>
                <value>
                    <fullName>ACET Rapid Responder Team</fullName>
                    <isActive>false</isActive>
                    <label>ACET Rapid Responder Team</label>
                </value>
                <value>
                    <fullName>ACET System Administrator</fullName>
                    <isActive>false</isActive>
                    <label>ACET System Administrator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Hyperlink URL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Bookmark Link</label>
    <listViews>
        <fullName>ACET_Member_Bookmark_Links</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Profiles__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profiles__c</field>
            <operation>includes</operation>
            <value>ACET Member</value>
        </filters>
        <label>ACET Member Bookmark Links</label>
    </listViews>
    <listViews>
        <fullName>Active_Bookmarks</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Profiles__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Bookmarks</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Profiles__c</columns>
        <columns>URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_By_Harish_Sanakki</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>URL__c</columns>
        <columns>Profiles__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Harish Sanakki</value>
        </filters>
        <label>Created By Harish Sanakki</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Bookmark Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookmark Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>